Fix for libc6 vulnerability